Fixed styling as it looked different on safari with <input>

--- a/www/stylesheet.css
+++ b/www/stylesheet.css
@@ -94,7 +94,7 @@ li{
   font-size: 2vh;
 }
 
-form.alignCenter{
+.alignCenter{
   display: flex;
   justify-content: center;
 }
